# react-native-webassembly

./: .gitignore  README.md  index.js  package.json  react-native-web-assembly.podspec
android/: build.gradle
android/src/main/java/com/reactlibrary/: CWebAssembly.java  CWebAssemblyInstance.java  WebAssembly.java  WebAssemblyInstance.java  WebAssemblyModule.java  WebAssemblyPackage.java
android/wasm/: Cargo.toml
android/wasm/src/: lib.rs
ios/: WebAssembly.h  WebAssembly.m
ios/WebAssembly.xcodeproj/: project.pbxproj
ios/WebAssembly.xcworkspace/: contents.xcworkspacedata
