[package]
name = "wasm"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.10", default-features = false }
error-chain = { version = "0.12", default-features = false }
log = "0.4"
android_logger = "0.5"

[lib]
crate_type = ["dylib"]
