[package]
name = "wasm"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmi = "0.6.2"

# [target.'cfg(target_os="android")'.dependencies]
jni = "0.16.0"
log = "0.4"
android_logger = "0.5"

[lib]
crate_type = ["cdylib"]
